initial commit - phm and empty arraymap tests